# nvim-config

./: .gitignore  AGENTS.md  CHEATSHEET.md  README.md  autocommands.vim  coc-settings.json  custom.vim  env.sh  env.sh.local  env.vim  func.vim  init.vim  justfile  mappings.vim  nvimrc  options.vim  plug_vars.vim  plugin.vim  themes.vim  var.vim  vars.vim
UltiSnips/: python.snippets
docs/: vim.md
lua/: autocommands.lua  check_deps.lua  custom.lua  custom_callbacks.lua  custom_filetype.lua  debug_sample.lua  init.lua  keymap.lua  lsp.lua  my_utils.lua  options.lua  packer_plugins.lua  plugins.lua  setup.lua  themes.lua  utils.lua  var.lua
myprojects-temp/py_proj/: .gitignore  Makefile  pyproject.toml  setup.cfg  setup.py
myprojects-temp/py_proj/docker/: Dockerfile
myprojects-temp/py_proj/docs/: demo.ipynb
myprojects-temp/py_proj/scripts/: run.sh
myprojects-temp/py_proj/tests/: demo_test.py
mysnips/: cpp.snippets  cpp_my.snippets  package.json  python.snippets  python_my.snippets  sh.snippets  sh_my.snippets
mytemplates/: main.cc.template  py.template  setup.cfg.template
plugins/: coc.vim
resources/: .flake8  .tmux.conf  .tmux.conf.local  clang-format  clang-tidy  pycodestyle
snips/: README.md  friendly-snippets  tovs.py
templates/: compose.yaml  default.cc  default.h  default.hpp  default.html  default.sh  main.c  main.cc  setup.cfg
tools/: .custom_env.sh  deploy_docker.sh  deploy_server.sh  install-bk.sh  install-linux.sh  install.sh  install_black.sh  install_luarock.sh  install_nodejs.sh  install_packer.sh  install_per.sh  just.sh  (+4 more)
(+90 files in other folders)
