[metadata]
name = demo
version = 0.1
author = lihao
author_email = haoliplus@gmail.com
description = demo
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/demo/demo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9, <4
install_requires = 
    tqdm>=1.0
    fire
    loguru
    easydict
    psutil
    pandas
    # sample @ git+http://github.com/demo/sample.git

[options.packages.find]
where = src

[egg_info]
egg_base = dist

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.yaml
# Include any *.yaml files found in the "demo" package (but not in its
# subpackages):
demo = *.yaml
